--- a/engines/deal/app/views/deal/reports/by_contract.html.haml
+++ b/engines/deal/app/views/deal/reports/by_contract.html.haml
@@ -1,12 +1,11 @@
 = javascript_include_tag "//www.google.com/jsapi", "chartkick" 
+
 .row
   .col-sm-12
-    %section.panel
-      %header.panel-heading
-        .title 
-          Relatório Compras Por Contrato
-        %hr/
-      .panel-body
+    .portlet.portlet-boxed
+      .portlet-header
+        %h4.portlet-title Relatório Compras Por Contrato
+      .portlet-body
         .row
           .col-md-12
             = simple_form_for by_contract_reports_path, method: :get do |f|
@@ -17,8 +16,8 @@
                   = f.input :date_end, label: "Data fim", input_html: { name: 'period[date_end]', class: 'date', value: (params[:period].present?) ? params[:period][:date_end] : Date.today.end_of_month.strftime('%d/%m/%Y')}
                 .col-md-4
                   = f.input :contract, as: :select, label: "Contrato", collection: Commercial::Contract.all.order(:title).map { |key| [key.title.upcase, key.id]}, selected: params[:by_contract], include_blank: false, input_html: { name: 'by_contract' }
-                .col-md-2{style: 'margin-top: 30px'}
-                  = f.submit "Gerar Relatório", name: nil, class: 'btn btn-success'
+                .col-md-2{style: 'margin-top: 24px'}
+                  = f.submit "Gerar Relatório", name: nil, class: 'btn btn-success btn-sm', data: { disable_with: t(:disable_with)}
         %hr/
         .row
           .col-md-12
