--- a/engines/finance/app/views/finance/payables/index.html.haml
+++ b/engines/finance/app/views/finance/payables/index.html.haml
@@ -8,18 +8,21 @@
         .row
           = simple_form_for url_for, method: :get do |f|
             .col-md-3
-              = f.input :cost_center, label: "Centro de custo", as: :select, collection: Finance::CostCenter.all.order(:name), include_blank: "Todos"
+              = f.input :by_contract, label: "Centro de custo", as: :select, collection: Commercial::Contract.all.order(:title), include_blank: "Todos", selected: params[:by_contract], input_html: { name: 'by_contract'}
+            .col-md-2
+              = f.input :by_situation, label: "Situação", as: :select, selected: params[:by_situation], collection: [["Pago", 0], ["Não pago", 1]], include_blank: "Todos", input_html: { name: 'by_situation'}
+            .col-md-2
+              = f.input :by_start, label: "Início", as: :string, input_html: {class: 'date', name: 'by_start', value: params[:by_start]}
+            .col-md-2
+              = f.input :by_end, label: "Fim", as: :string, input_html: {class: 'date', name: 'by_end', value: params[:by_end]}
             .col-md-3
-              = f.input :start, label: "Início", as: :string, input_html: {class: 'date'}
-            .col-md-3
-              = f.input :end, label: "Fim", as: :string, input_html: {class: 'date'}
-            .col-md-3
-              = f.submit "Filtar listagem", name: nil, class: 'btn btn-secondary btn-sm filter-button'
+              = f.submit "Filtar listagem", name: nil, class: 'btn btn-secondary btn-sm filter-button', data: { disable_with: t(:disable_with)}
         .row
           .col-md-12
             %table.table.table-striped.table-bordered.table-hover
               %thead
                 %tr
+                  %th Empresa
                   %th Centro
                   %th Nome
                   %th FPA
@@ -28,13 +31,19 @@
                   %th Situação
                   %th Ações
               %tbody
+                - @total_success = 0
+                - @total_danger  = 0
                 - @payables.each do |pay|
                   %tr
-                    %td= pay.cost_center.name if pay.cost_center.present?
+                    %td= pay.contract.company.name if pay.contract.present? && pay.contract.company.present? 
+                    %td= pay.contract.title if pay.contract.present?
                     %td= pay.name
                     %td= pay.purchase.protocol if pay.purchase.present?
                     %td= pay.date_payable.strftime("%d/%m/%Y") if pay.date_payable.present?
-                    %td= number_to_currency pay.value
+                    %td
+                      - @total_success  =  @total_success + pay.value.gsub('R$ ', '').to_f if pay.status
+                      - @total_danger   =  @total_danger + pay.value.gsub('R$ ', '').to_f unless pay.status
+                      = number_to_currency pay.value.gsub('R$ ', '').to_f
                     %td
                       - if pay.status
                         %span.label.label-success
@@ -47,7 +56,11 @@
                       = link_to "", payable_path(pay), method: :delete, data: { confirm: t(:confirm_destroy)}, class: 'btn btn-xs btn-danger glyphicon glyphicon-remove'
               %footer
                 %tr 
-                  %th{colspan: 4} Total
-                  %th= number_to_currency @payables.sum(:value) if @payables.present?
-                  %th
-                  %th
+                  %th{colspan: 3} Total efetivado
+                  %td
+                    %span.label.label-success
+                      = number_to_currency @total_success if @payables.present?
+                  %th{colspan: 3} Total não efetivado
+                  %td
+                    %span.label.label-danger
+                      = number_to_currency @total_danger if @payables.present?
