--- a/engines/finance/app/views/finance/payables/index.html.haml
+++ b/engines/finance/app/views/finance/payables/index.html.haml
@@ -10,11 +10,7 @@
             .col-md-3
               = f.input :by_contract, label: "Centro de custo", as: :select, collection: Commercial::Contract.all.order(:title), include_blank: "Todos", selected: params[:by_contract], input_html: { name: 'by_contract'}
             .col-md-2
-              = f.input :by_situation, label: "Situação", as: :select, selected: params[:by_situation], collection: [["Pago", 0], ["Não pago", 1]], include_blank: "Todos", input_html: { name: 'by_situation'}
-            .col-md-2
-              = f.input :by_start, label: "Início", as: :string, input_html: {class: 'date', name: 'by_start', value: params[:by_start]}
-            .col-md-2
-              = f.input :by_end, label: "Fim", as: :string, input_html: {class: 'date', name: 'by_end', value: params[:by_end]}
+              = f.input :by_status, label: "Pago?", as: :select, selected: params[:by_status], include_blank: "Todos", input_html: { name: 'by_status'}
             .col-md-3
               = f.submit "Filtar listagem", name: nil, class: 'btn btn-secondary btn-sm filter-button', data: { disable_with: t(:disable_with)}
         .row
@@ -22,10 +18,10 @@
             %table.table.table-striped.table-bordered.table-hover
               %thead
                 %tr
-                  %th Empresa
-                  %th Centro
-                  %th Nome
+                  %th Cod.
+                  %th C. Custo
                   %th FPA
+                  %th Nome
                   %th Vencimento
                   %th Valor
                   %th Situação
@@ -35,10 +31,17 @@
                 - @total_danger  = 0
                 - @payables.each do |pay|
                   %tr
-                    %td= pay.contract.company.name if pay.contract.present? && pay.contract.company.present? 
-                    %td= pay.contract.title if pay.contract.present?
+                    %td= pay.id
+                    %td
+                      - pay.payable_contracts.each do |item|
+                        %span.label.label-secondary{style: 'margin-left: 2px'}
+                          = item.contract.title if item.contract.present?
+                    %td
+                      - pay.payable_purchases.each do |item|
+                        %span.label.label-secondary{style: 'margin-left: 2px'}
+                          = '#'
+                          = item.purchase.protocol if item.purchase.present?
                     %td= pay.name
-                    %td= pay.purchase.protocol if pay.purchase.present?
                     %td= pay.date_payable.strftime("%d/%m/%Y") if pay.date_payable.present?
                     %td
                       - @total_success  =  @total_success + pay.value.gsub('R$ ', '').to_f if pay.status
@@ -60,7 +63,7 @@
                   %td
                     %span.label.label-success
                       = number_to_currency @total_success if @payables.present?
-                  %th{colspan: 3} Total não efetivado
+                  %th{colspan: 2} Total não efetivado
                   %td
                     %span.label.label-danger
                       = number_to_currency @total_danger if @payables.present?
